--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -40,6 +40,7 @@
 
 .input {
     height: 40px;
+    width: 150px;
     border: 1px solid gray;
     margin-bottom: 10px;
     padding-left: 10px;
@@ -210,5 +211,3 @@
     flex-direction: row;
     justify-content: space-between;
 }
-
-
