--- a/src/styles/styles.module.css
+++ b/src/styles/styles.module.css
@@ -115,21 +115,20 @@
 .buttonText {
     color: #D3D0CB;
     font-size: 20px;
-
     font-family: 'Quicksand', sans-serif;
-}
-
-.cardWrapper {
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 .container {
     width: 100%;
     height: auto;
     min-height: 100vh;
+}
+
+.cardWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap:wrap;
 }
 
 .cardContainer {
@@ -139,7 +138,7 @@
     width: 20vw;
     height: 20vw;
     border-radius: 10px;
-    margin: 50px 0;
+    margin: 50px;
     min-width: 300px;
     min-height: 300px;
 }
@@ -169,6 +168,7 @@
     font-size: 24px;
     min-width: 300px;
     margin-bottom: 50px;
+    margin: auto;
 }
 
 .homeFooter {
@@ -226,4 +226,6 @@
         margin-top: 20%;
         flex-direction: column;
     }
+
+
 }
