--- a/src/app/components/profile/desktop/styles.module.css
+++ b/src/app/components/profile/desktop/styles.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
+
 .page {
     width: 100%;
     height: auto;
@@ -84,13 +87,13 @@
 
 .playlistContainer {
     width: 100%;
-    height: 30%;
-    border: 1px solid grey;
+    height: 25%;
+    border-top: 1px solid grey;
 }
 .followedContainer {
     width: 100%;
-    height: 30%;
-    border: 1px solid grey;
+    height: 25%;
+    border-top: 1px solid grey;
 }
 
 .subtitle {
@@ -118,7 +121,7 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     height: 20px;
     bottom: 0px;
@@ -128,4 +131,12 @@
 .userStats {
     width: 20%;
     min-width: 25%;
+}
+
+.userName {
+    font-size: 35px;
+    color: #9FB1BC;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    font-family: 'Quicksand', sans-serif;
 }
