--- a/src/app/components/profile/desktop/styles.module.css
+++ b/src/app/components/profile/desktop/styles.module.css
@@ -107,14 +107,21 @@
 .imageContainer {
     width: 20vh;
     height: 20vh;
-    border: 1px solid gray;
     border-radius: 50%;
+    color: #6E8898;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .stats {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    color: #9FB1BC;
+    font-family: 'Quicksand', sans-serif
+
 }
 
 .profileLinks {
@@ -139,4 +146,74 @@
     margin-bottom: 20px;
     margin-right: 30px;
     font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+}
+
+.createPlaylist {
+    background-color: #FB5012;
+    border-radius: 5px;
+    width: 10%;
+    min-width: 100px;
+    height: 5%;
+    min-height: 50px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    margin-top: 5%
+}
+
+.createPlaylist:hover {
+    background-color: #a4350c;
+}
+
+.searchBox {
+    position: absolute;
+    top: 5%;
+    left: 20%;
+    transform:  translate(-50%,50%);
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+}
+
+.searchBox:hover > .searchInput {
+    width: 240px;
+    padding: 0 6px;
+}
+
+.searchBox:hover > .searchButton {
+    background: transparent;
+    color : #2f3640;
+}
+
+.searchButton {
+    color: white;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+
+}
+
+.searchInput {
+    border:none;
+    background: none;
+    outline:none;
+    float:left;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 40px;
+    width: 0px;
+
 }
