--- a/src/app/components/profile/desktop/styles.module.css
+++ b/src/app/components/profile/desktop/styles.module.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
-
 .page {
     width: 100%;
     height: auto;
@@ -215,5 +214,33 @@
     transition: 0.4s;
     line-height: 40px;
     width: 0px;
+
+}
+
+.searchResults {
+    padding: 10px 20px;
+    border-bottom: 1px solid whitesmoke;
+
+}
+
+.searchResults:last-child {
+    border-bottom: none;
+}
+
+.search {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.results  {
+    position: absolute;
+    top: 80%;
+    left: 10%;
+    z-index: 1000;
+    background-color: #2F3640FF;
+    width: 240px;
+    color: white;
+    border-radius: 10px;
 
 }
