--- a/src/app/components/profile/mobile/styles.module.css
+++ b/src/app/components/profile/mobile/styles.module.css
@@ -252,3 +252,32 @@
     margin: 10px;
     margin-right: 40%;
 }
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.modalContent {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 500px;
+    width: 90%;
+    background-color: #2f3640;
+    color: #6E8898;
+}
+
+.underline {
+    text-decoration: underline;
+}
