--- a/src/app/components/profile/desktop/styles.module.css
+++ b/src/app/components/profile/desktop/styles.module.css
@@ -3,7 +3,7 @@
 .page {
     width: 100%;
     height: auto;
-    min-height: 100vh;
+
     background-color: #232528;
 }
 
@@ -30,7 +30,7 @@
     z-index: 1000;
     background-color: #6E8898;
     width: 15%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -64,7 +64,7 @@
 .container {
     width: 85%;
     height: 90%;
-    position: fixed;
+    position: absolute;
     top: 10%;
     left: 15%;
     color: white;
@@ -87,7 +87,7 @@
 
 .playlistContainer {
     width: 100%;
-    height: 25%;
+    height: auto;
     border-top: 1px solid grey;
 }
 .followedContainer {
@@ -253,6 +253,7 @@
 }
 
 .modal {
+    z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -261,12 +262,13 @@
     top: 0;
     width: 100%;
     height: 100%;
-
-
 }
 
 .modalContent {
-
+    /*display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;*/
     padding: 20px;
     border-radius: 10px;
     max-width: 500px;
