--- a/src/app/components/profile/mobile/styles.module.css
+++ b/src/app/components/profile/mobile/styles.module.css
@@ -90,17 +90,20 @@
 
 .page {
     width: 100vw;
-    height: 100vh;
+    height: auto;
     background-color: #232528;
 }
 
 .playlistContainer {
+
     width: 100%;
-    height: 25%;
+    height: auto;
     border-top: 1px solid #6E8898;
     border-bottom: 1px solid #6E8898;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .followedContainer {
@@ -127,7 +130,7 @@
 
 .createPlaylist {
     position: relative;
-    right: -75%;
+    right: -65%;
     background-color: #9FB1BC;
     border: 1px solid #232528;
     border-radius: 50px;
@@ -142,6 +145,7 @@
 
 .secondContainer {
     position: relative;
+    bottom: 5px;
     right: 0;
     width: 50%;
     height: 100%;
@@ -159,6 +163,7 @@
     justify-content: center;
     align-items: center;
     background-color: #9FB1BC;
+    margin-bottom: 5px;
 
 }
 
@@ -255,16 +260,14 @@
 
 .modal {
     display: flex;
+    position: absolute;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-
-
 }
 
 .modalContent {
