--- a/src/app/components/feed/desktop/styles.module.css
+++ b/src/app/components/feed/desktop/styles.module.css
@@ -17,7 +17,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    border-right: 1px solid whitesmoke;
+    border-right: 1px solid gray;
 }
 
 .linkContainer {
@@ -65,6 +65,7 @@
     display: flex;
     flex-direction: column;
     width: 15vw;
+    margin-top: 1vh;
     justify-content: center;
     align-items: center;
 }
@@ -128,4 +129,132 @@
     color: #6E8898;
     width: 100%;
     margin: 2vh;
+}
+.postContainerElement {
+    width: 72vw;
+    background-color: hsla(200, 15%, 47%, 0.5) ;
+}
+
+.posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 70vw;
+    height: auto;
+    margin: 2vh;
+    padding: 2vh;
+    background-color: hsla(200, 15%, 47%, 0.5);
+    border-radius: 5px
+}
+
+.post {
+    width: 80%;
+    margin: 1vh;
+    background-color:#9FB1BC ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 50px;
+}
+
+.postContainer {
+    width: 100%;
+    height: auto;
+    margin: 1vh;
+    padding: 1vh;
+    border-radius: 2px;
+    color: #454545;
+}
+
+.postProfilePicture {
+    width: 10%;
+    margin-top: 1vh;
+    margin-left: 1vh;
+    margin-right: 3vh;
+}
+
+.profilePicture{
+
+}
+
+.postDate {
+    color: #454545;
+}
+
+.postHeader {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-right: 30%;
+}
+
+.userName {
+    color: #454545;
+}
+
+.userName:hover {
+    text-decoration: underline;
+}
+
+.userName:active {
+    text-decoration: underline;
+}
+
+.commentInput {
+    border-radius: 10px;
+    margin: 1vh;
+    color: black;
+}
+
+.commentSubmitButton {
+    background-color: hsla(16, 96%, 51%, 0.5);
+    border: none;
+    border-radius: 30px;
+    margin: 1vh;
+    padding: 1vh;
+}
+
+.commentSubmitButton:hover {
+    background-color: hsla(16, 96%, 51%, 0.8);
+}
+
+.loadMore {
+
+}
+
+.loadMore:hover {
+
+}
+
+.loadMore:active {
+
+}
+
+.line {
+    width: 90%;
+    border: 1px solid black;
+}
+
+.postFooter {
+
+}
+
+.commentsContainer {
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.comments {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    margin-bottom: 1vh;
+    padding: 5px;
+}
+
+.iconsContainer{
+
 }
