--- a/src/app/components/profile/mobile/styles.module.css
+++ b/src/app/components/profile/mobile/styles.module.css
@@ -14,7 +14,7 @@
     justify-content: center;
 }
 
-.linkContainer:hover {
+.linkContainer:active {
     background-color: #232525;
     color: #a4350c;
 }
