--- a/src/app/signin/styles.module.css
+++ b/src/app/signin/styles.module.css
@@ -39,21 +39,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
     padding: 20px;
-    background-color: #232528;
+    background-color: #07020D;
     margin: auto;
     width: 35%;
     height: auto;
     border-radius: 5px;
-    box-shadow: 0 5px 15px rgba(251, 80, 18, 0.5);
-    border: 1px solid rgba(251, 80, 18, 0.5);
 }
 
 .page {
     width: 100vw;
     height: 100vh;
-    background-color: #232528;
+    background-color: #07020D;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,5 +74,15 @@
 
 .underline {
     text-decoration: underline;
+}
+
+.underline:hover {
+    color: darkgray;
+}
+
+.logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
