--- a/src/app/signin/styles.module.css
+++ b/src/app/signin/styles.module.css
@@ -62,6 +62,7 @@
     background-color: #212131;
     margin: auto;
     width: 35%;
+    max-width: 400px;
     height: auto;
     border-radius: 5px;
 }
@@ -113,5 +114,14 @@
     top: 60%;
     right: 30px;
     transform: translate(0, -50%);
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 100%;
+        background-color: transparent;
+    }
+
+
 }
 
