--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/nny1gqe.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,4 +26,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+@font-face {
+  font-family: 'Bahaus';
+  src: url('../../public/bauhaus-93.ttf') format('truetype');
 }
