--- a/src/app/signin/styles.module.css
+++ b/src/app/signin/styles.module.css
@@ -14,8 +14,8 @@
 .title {
     font-size: 60px;
     color: #F9F9F9;
-    font-weight: bold;
-    font-family: Bahaus, sans-serif;
+
+    font-family: Bauhaus, sans-serif;
 }
 
 .formGroup {
