--- a/src/app/signup/styles.module.css
+++ b/src/app/signup/styles.module.css
@@ -42,12 +42,10 @@
     border-image-slice: 1;
 }
 
-
 .title {
     font-size: 60px;
     color: #F9F9F9;
-    font-weight: 300;
-    font-family: 'Bahaus', sans-serif;
+    font-family: 'Bauhaus', sans-serif;
 }
 
 .container {
@@ -63,7 +61,6 @@
     max-width: 500px;
     height: auto;
     border-radius: 5px;
-
 }
 
 .page {
@@ -104,7 +101,6 @@
     color: #FB5012;
     margin-bottom: 10px;
 }
-
 
 .logo {
     position: absolute;
